# fusion-researcher

./: .env.example  .gitignore  CLAUDE.md  Fusion_Research_PRD.md  IMPLEMENTATION.md  PRD.md  README.md  pyproject.toml
.claude/skills/: review.md
research/: Fusion_Research.md  Fusion_Research_UPDATE.md  Fusion_Research_UPDATE_2026.md  chart_script.py  chart_script_1.py  chart_script_2.py  fusion_smr_network.json
research/news_cache/: digest_20260109_1316.md  digest_20260113_1224.md  digest_20260113_1428.md
scripts/: generate_news_digest.py  init_db.py  merge_research_updates.py  normalize_relationships.py  populate_sample_data.py  populate_vector_store.py  run_full_update_pipeline.py  sync_database_from_markdown.py
src/: __init__.py  config.py
src/data/: __init__.py  database.py  repositories.py  vector_store.py
src/llm/: __init__.py  analyzer.py  cache.py  chain_factory.py  merge_prompts.py  query_processor.py
src/models/: __init__.py  company.py  funding.py  market.py  merge_models.py  partnership.py  technology.py  update_proposal.py
src/services/: __init__.py  audit_service.py  company_service.py  crud_service.py  database_sync_service.py  markdown_merger_service.py  market_service.py  network_service.py  news_service.py  report_service.py  semantic_search_service.py  technology_service.py  updater_service.py
streamlit_app/: __init__.py  app.py
streamlit_app/pages/: 10_✏️_Editor.py  1_🏠_Home.py  2_🔍_Companies.py  3_🔬_Technologies.py  4_📊_Markets.py  7_📰_News.py  (+4 more)
tests/: __init__.py  conftest.py  test_database.py  test_models.py  test_updater.py
(+3 files in other folders)
