[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fusion-research-platform"
version = "0.1.0"
description = "AI-powered nuclear fusion market intelligence platform"
authors = [{name = "Research Team", email = "research@example.com"}]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "streamlit>=1.28",
    "langchain>=0.1",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.10",
    "pandas>=2.0",
    "numpy>=1.24",
    "plotly>=5.17",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.25",
    "beautifulsoup4>=4.12",
    "markdown-it-py>=3.0",
    "apscheduler>=3.10",
    "python-dotenv>=1.0",
    "chromadb>=0.4",
    "openai>=1.0",
    "langchain-experimental>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-chroma>=1.1.0",
    "feedparser>=6.0.12",
    "tavily-python>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.4",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.hatch.build.targets.wheel]
packages = ["src", "streamlit_app"]
